--- a/project.html
+++ b/project.html
@@ -124,7 +124,7 @@
         <div class="portfolio-item" id="thieves-of-mind">
             <div class="project-image">
                 <img src="img/projects/thieves.png" alt="Thieves of Mind">
-                <p class="button bold full">290+ Downloads</p>
+                <p class="button bold full">290+ Visits</p>
                 <a class="button active bold full" target="_blank" href="https://www.roblox.com/games/12612229560/">View on Roblox</a>
             </div>
             <div class="project-details">
