--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,11 @@
             <div class="project-details">
                 <h1>Commissions!</h1>
                 <p class="description">
-                    I am currently accepting commissions for Roblox development work (Robux and USD offers, please no percentage payments). If you are interested in hiring me, please contact me via the methods listed in the following section.
+                    I am currently accepting commissions for Roblox development work (Robux and USD offers, please no percentage payments). 
+                    <br /> <br />
+                    I am also accepting commissions for Minecraft Paper server plugins (USD offers only, hourly rate preferred but will take commissions).
+                    <br /> <br />
+                    If you are interested in hiring me, please contact me via the methods listed in the following section.
                 </p>
             </div>
         </div>
