--- a/project.html
+++ b/project.html
@@ -132,7 +132,7 @@
                 <p class="subheading-date">February 2023</p>
                 <p class="subheading-date">Programmer, UI Designer</p>
                 <p class="description">
-                    Thieves of Mind is a game created on the Roblox platform in early 2023 for a 24-hour game jham with the theme "mind control", hosted by a Roblox scripting community, ScriptersCF.
+                    Thieves of Mind is a game created on the Roblox platform in early 2023 for a 24-hour game jam with the theme "mind control", hosted by a Roblox scripting community, ScriptersCF.
                     <br /> <br />
                     Play as an alien marauder who has appeared in a strange land called Robloxia. To learn more about this land you must knock on the doors of residents, use your mind controlling abilities to take control of their bodies, and steal their belongings. Handing these belongings back to yourself and selling them to your leader allows you to purchase upgrades to improve your supernatural abilities.
                     <br /> <br />
