Fix typos & added software
- Fixed typos in the projects and dashboard pages
- Specified the use of 2D and 3D for some games to show diverse abilities
- Added paint.net to the list of software that I use

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <br />
 
-                    I make use of several industy standard software both in education and in my own time. These include:
+                    I make use of several industry standard software both in education and in my own time. These include:
                     <ul>
                         <p class="button">Visual Studio Code</p>
                         <p class="button">IntelliJ IDEA</p>
@@ -82,6 +82,7 @@
                         <p class="button">Unreal Engine 5</p>
                         <p class="button">Aseprite</p>
                         <p class="button">Adobe Photoshop</p>
+                        <p class="button">paint.net</p>
                         <p class="button">Adobe Substance Painter</p>
                         <p class="button">Blender</p>
                         <p class="button">Miro</p>
