--- a/project.html
+++ b/project.html
@@ -24,14 +24,14 @@
         <div class="portfolio-item" id="2-player-teamwork-puzzles-obby">
             <div class="project-image">
                 <img src="img/projects/teamworkpuzzles.png" alt="2 Player Teamwork Puzzles Obby">
-                <p class="button bold full">230+ Visits</p>
+                <p class="button bold full">250+ Visits</p>
                 <a class="button active bold full" target="_blank" href="https://www.roblox.com/games/14916851447/">View on Roblox</a>
             </div>
             <div class="project-details">
                 <h1>2 Player Teamwork Puzzles Obby</h1>
+                <p class="subheading-date">October 2023</p>
+                <p class="subheading-date">Programmer, UI Designer, Level Designer</p>
                 <p class="description">
-                    <p class="subheading-date">October 2023</p>
-                    <p class="subheading-date">Programmer, UI Designer, Level Designer</p>
                     <p class="description">
                         2 Player Teamwork Puzzles Obby is a game released on the Roblox platform in late 2023.
                         <br /> <br />
@@ -45,13 +45,13 @@
 
         <div class="portfolio-item" id="teleportationcrystals">
             <div class="project-image">
-                <img src="img/projects/tpcrystal.png" alt="TeleportationCrystals">
+                <img src="img/projects/tpcrystal.png" alt="Teleportation Crystals">
                 <p class="button bold full">33 Downloads</p>
                 <a class="button active bold full" target="_blank" href="https://modrinth.com/plugin/teleportationcrystals">View on Modrinth</a>
                 <a class="button active bold full" target="_blank" href="https://github.com/xP9nda/TeleportationCrystals">View Source on GitHub</a>
             </div>
             <div class="project-details">
-                <h1>TeleportationCrystals</h1>
+                <h1>Teleportation Crystals</h1>
                 <p class="subheading-date">June 2023</p>
                 <p class="subheading-date">Sole Developer</p>
                 <p class="description">
@@ -73,7 +73,7 @@
                 <p class="subheading-date">May 2023</p>
                 <p class="subheading-date">Sole Developer</p>
                 <p class="description">
-                    Surveillance State is a game created in late May 2023 using the Unity engine. It was created for a college project.
+                    Surveillance State is a 3D game created in late May 2023 using the Unity engine. It was created for a college project.
                     <br /> <br />
                     This game is a first-person horror experience where you must monitor surveillance cameras for anomalous incidents whilst taking measures to ensure that you do not lose your mind.
                     <br /> <br />
@@ -114,7 +114,7 @@
                 <p class="subheading-date">March 2023</p>
                 <p class="subheading-date">Sole Developer</p>
                 <p class="description">
-                    The Ghost in Me is a game created in late March 2023 using the Unity engine for a 5 day game jam with the theme "death is not the end".
+                    The Ghost in Me is a 2D game created in late March 2023 using the Unity engine for a 5 day game jam with the theme "death is not the end".
                     <br /> <br />
                     In this puzzle/platformer game you take on the role of a reaper on a journey to help souls cross over. Using your ghostly powers, you must explore the six levels, opening doors and dodging obstacles to reach the lost souls and provide them the closure that they seek.
                 </p>
