--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
         <div class="portfolio-item" id="2-player-teamwork-puzzles-obby">
             <div class="project-image">
                 <img src="img/projects/teamworkpuzzles.png" alt="2 Player Teamwork Puzzles Obby">
-                <p class="button bold full">250+ Visits</p>
+                <p class="button bold full">280+ Visits</p>
                 <a class="button active bold full" target="_blank" href="https://www.roblox.com/games/14916851447/">View on Roblox</a>
             </div>
             <div class="project-details">
@@ -117,6 +117,23 @@
                     The Ghost in Me is a 2D game created in late March 2023 using the Unity engine for a 5 day game jam with the theme "death is not the end".
                     <br /> <br />
                     In this puzzle/platformer game you take on the role of a reaper on a journey to help souls cross over. Using your ghostly powers, you must explore the six levels, opening doors and dodging obstacles to reach the lost souls and provide them the closure that they seek.
+                </p>
+            </div>
+        </div>
+
+        <div class="portfolio-item" id="nef-jpg-converter">
+            <div class="project-image">
+                <a class="button active bold full" target="_blank" href="https://github.com/xP9nda/nef-jpg-converter">View Source on GitHub</a>
+                <a class="button active bold full" target="_blank" href="https://www.instagram.com/photosbyryann_/">Check out my friend's photography</a>
+            </div>
+            <div class="project-details">
+                <h1>NEF to JPG Converter</h1>
+                <p class="subheading-date">March 2023</p>
+                <p class="subheading-date">Sole Developer</p>
+                <p class="description">
+                    This is a program that I developed using Python in March 2023. This program converts all .NEF files in a directory to .JPG files, whilst preserving the original file size and quality.
+                    <br /> <br />
+                    I created this program at the request of a friend studying photography, so they can convert all files taken on their camera to a more accessible format.
                 </p>
             </div>
         </div>
