--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <div class="project-details">
                 <h1>Commissions!</h1>
                 <p class="description">
-                    I am currently accepting commissions for Roblox development work (Robux and USD offers, please no percentage payments). 
+                    I am currently accepting commissions for Roblox development work (Robux and USD offers, please no percentage payments). If you are contacting me regarding Roblox development work, my preferred method of contact is via the Roblox DevForum, or through Discord.
                     <br /> <br />
                     I am also accepting commissions for Minecraft Paper server plugins (USD offers only, hourly rate preferred but will take commissions).
                     <br /> <br />
