--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
         <div class="portfolio-item" id="2-player-teamwork-puzzles-obby">
             <div class="project-image">
                 <img src="img/projects/teamworkpuzzles.png" alt="2 Player Teamwork Puzzles Obby">
-                <p class="button bold full">280+ Visits</p>
+                <p class="button bold full">315+ Visits</p>
                 <a class="button active bold full" target="_blank" href="https://www.roblox.com/games/14916851447/">View on Roblox</a>
             </div>
             <div class="project-details">
@@ -191,6 +191,22 @@
                     Players must navigate to and stand on the colour which appears on their screen before the timer runs out. Failure to stand on the correct colour will result in the player being elimated; the last player standing wins.
                     <br /> <br />
                     Players earn coins during their gameplay which can be spent to customise their experience.
+                </p>
+            </div>
+        </div>
+
+        <div class="portfolio-item" id="box-game">
+            <div class="project-image">
+                <img src="img/projects/box-game.png" alt="Box Game">
+            </div>
+            <div class="project-details">
+                <h1>Box Game</h1>
+                <p class="subheading-date">August 2020</p>
+                <p class="subheading-date">Sole Developer</p>
+                <p class="description">
+                    This is an untitled 'Box Game' created in August 2020 using Python.
+                    <br /> <br />
+                    This is a console text-based game where the player must push a box around a grid until the box is pushed into the goal. The game increases in difficulty the further the player progresses, with more enemies being added to the level that destroy the box if the player pushes it into them, and more boxes appearing after a certain number of levels has been beaten. All of the levels are randomly generated, allowing for a unique experience each time the game is played.
                 </p>
             </div>
         </div>
