Update numbers & titles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">xP9nda's Portfolio - Dashboard</h1>
+        <h1 class="title">Joshua's Portfolio - Dashboard</h1>
         <nav>
             <ul>
                 <li><a class="button active" href="index.html">Home</a></li>
@@ -99,7 +99,7 @@
 
     </section>
     <footer>
-        <p>&copy; 2023 xP9nda</p>
+        <p>2023 xP9nda</p>
     </footer>
 </body>
 </html>
