--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">xP9nda's Portfolio - Projects & Past Work</h1>
+        <h1 class="title">Joshua's Portfolio - Projects & Past Work</h1>
         <nav>
             <ul>
                 <li><a class="button" href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
         <div class="portfolio-item" id="2-player-teamwork-puzzles-obby">
             <div class="project-image">
                 <img src="img/projects/teamworkpuzzles.png" alt="2 Player Teamwork Puzzles Obby">
-                <p class="button bold full">315+ Visits</p>
+                <p class="button bold full">410+ Visits</p>
                 <a class="button active bold full" target="_blank" href="https://www.roblox.com/games/14916851447/">View on Roblox</a>
             </div>
             <div class="project-details">
@@ -46,7 +46,7 @@
         <div class="portfolio-item" id="teleportationcrystals">
             <div class="project-image">
                 <img src="img/projects/tpcrystal.png" alt="Teleportation Crystals">
-                <p class="button bold full">33 Downloads</p>
+                <p class="button bold full">34 Downloads</p>
                 <a class="button active bold full" target="_blank" href="https://modrinth.com/plugin/teleportationcrystals">View on Modrinth</a>
                 <a class="button active bold full" target="_blank" href="https://github.com/xP9nda/TeleportationCrystals">View Source on GitHub</a>
             </div>
@@ -161,7 +161,7 @@
         <div class="portfolio-item" id="graveyard-tycoon">
             <div class="project-image">
                 <img src="img/projects/graveyard.png" alt="Graveyard Tycoon">
-                <p class="button bold full">5.1K+ Visits</p>
+                <p class="button bold full">5.26K+ Visits</p>
                 <a class="button active bold full" target="_blank" href="https://www.roblox.com/games/11907770072/">View on Roblox</a>
             </div>
             <div class="project-details">
@@ -214,7 +214,7 @@
         
     </section>
     <footer>
-        <p>&copy; 2023 xP9nda</p>
+        <p>2023 xP9nda</p>
     </footer>
 </body>
 </html>
