--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="title">xP9nda's Portfolio - Experience</h1>
+        <h1 class="title">Joshua's Portfolio - Experience</h1>
         <nav>
             <ul>
                 <li><a class="button" href="index.html">Home</a></li>
@@ -50,7 +50,7 @@
         
     </section>
     <footer>
-        <p>&copy; 2023 xP9nda</p>
+        <p>2023 xP9nda</p>
     </footer>
 </body>
 </html>
