--- a/project.html
+++ b/project.html
@@ -21,6 +21,25 @@
     </header>
 
     <section class="content">
+        <div class="portfolio-item" id="enderpouch">
+            <div class="project-image">
+                <img src="img/projects/enderpouch-icon.png" alt="Ender Pouch">
+                <p class="button bold full">0 Downloads</p>
+                <a class="button active bold full" target="_blank" href="https://modrinth.com/plugin/enderpouch">View on Modrinth</a>
+                <a class="button active bold full" target="_blank" href="https://github.com/xP9nda/EnderPouch">View Source on GitHub</a>
+            </div>
+            <div class="project-details">
+                <h1>Ender Pouch</h1>
+                <p class="subheading-date">October 2023</p>
+                <p class="subheading-date">Sole Developer</p>
+                <p class="description">
+                    EnderPouch is an all in one ender chest management and access plugin for Minecraft Paper servers, created in late October 2023.
+                    <br /> <br />
+                    EnderPouch is your one-stop-shop for everything ender chests! This plugin introduces an ender pouch item, which players can use to open their ender chest from anywhere. A command is also added to allow players to view their ender chest, as well as allow staff to view other players ender chests.
+                </p>
+            </div>
+        </div>
+
         <div class="portfolio-item" id="2-player-teamwork-puzzles-obby">
             <div class="project-image">
                 <img src="img/projects/teamworkpuzzles.png" alt="2 Player Teamwork Puzzles Obby">
